--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
     "private": true,
     "type": "module",
-    "scripts": {
+"scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "start": "node server.js",
+        "heroku-postbuild": "npm run build"
     },
+    
     "devDependencies": {
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0.0",
